[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datahandler"
readme = "README.md"
description = "Data Handler"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = [
    "datahandler",
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = ["."]
